--- a/HTML/styles/link_style.css
+++ b/HTML/styles/link_style.css
@@ -4,7 +4,7 @@ a:link {
   text-decoration: none;
 }
 a:visited {
-  color: pink;
+  color: yellow;
   background-color: transparent;
   text-decoration: none;
 }
